tests/ui/const-generics/generic_const_exprs/inherent-assoc-const-empty-args.stderr
error[E0308]: mismatched types
  --> $DIR/inherent-assoc-const-empty-args.rs:19:5
   |
LL |     new()
   |     ^^^^^ expected `1`, found `usize::MAX`
   |
   = note: expected constant `1`
              found constant `usize::MAX`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0308`.
